Add form to classes.html

--- a/classes.html
+++ b/classes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Calm Little Stars - Classes</title>
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -72,44 +74,54 @@
                     <i class="far fa-clock iconsizing" aria-hidden="true"></i>
                     <span class="sr-only">Times</span>
                     <ul class="list-group">
-                    <li class="list-group-item">3.30pm - 4.15pm (Age 7-9)</li>
-                    <li class="list-group-item">4.30pm - 5.30pm (Age 9-11)</li>
+                        <li class="list-group-item">3.30pm - 4.15pm (Age 7-9)</li>
+                        <li class="list-group-item">4.30pm - 5.30pm (Age 9-11)</li>
                     </ul>
                 </div>
                 <div class="col-md-4 text-center container--topbottom20">
                     <i class="fas fa-map-marker-alt iconsizing" aria-hidden="true"></i>
                     <span class="sr-only">Location</span>
-                    <p>Calm Little Stars,<br>
-                    Lower Ground Floor,<br>
-                    41 Huddersfield Road,<br>
-                    Holmfirth<br>
-                    HD9 3JH</p>
-                    
+                    <p>Calm Little Stars,<br> Lower Ground Floor,<br> 41 Huddersfield Road,<br> Holmfirth
+                        <br> HD9 3JH</p>
+
                 </div>
             </div>
         </section>
         <!-- /Secondary Level Container -2- Form section-->
-                <!-- Secondary Level Container -2- Contact Form-->
+        <!-- Secondary Level Container -2- Contact Form-->
         <section class="container-fluid container-wide container-third-section-benefits container--topbottom75 container-callout-dark">
             <div class="row align-items-center container--translucentrounded container--topbottom20">
                 <div class="col-12">
-                    <div class="row justify-content-start">
+                    <div class="row justify-content-center">
                         <div class="col-12">
                             <h1 class="page-heading headingspace">Book Classes and Contact Us</h2>
                         </div>
-                    </div>
-                    <div class="row justify-content-start">
-                        <div class="col-12 text-center videosize embed-responsive embed-responsive-16by9">
-                            Contact Form
+                        <div class="col-md-6 text-center">
+                            <form>
+                                <div class="form-group">
+                                    <label class="sr-only" for="emailaddress">Name</label>
+                                    <input type="text" class="form-control input--text" id="exampleFormControlInput1" placeholder="Your Name">
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only" for="emailaddress">Email address</label>
+                                    <input type="email" class="form-control input--text" id="exampleFormControlInput1" placeholder="happychild@calmlittlestars.com">
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only" for="message">Your Message</label>
+                                    <textarea class="form-control input--text" id="exampleFormControlTextarea1" rows="3" placeholder="Enter dates you wish to book, or a message."></textarea>
+                                </div>
+                                <button type="submit" class="footer-item btn btn-success btn-lg">Start Calming</button>
+                            </form>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
         <!-- / Secondary Level Container -2- Contact Form -->
     </main>
     <!-- Footer-->
-        <!-- Footer-->
+    <!-- Footer-->
     <footer class="container-fluid container-footer container-callout-dark">
         <div class="row align-items-center justify-content-center">
             <div class="col-sm-8 text-center">
