Add content to coach.html

--- a/classes.html
+++ b/classes.html
@@ -59,7 +59,7 @@
     </header>
     <!-- /Header section-->
     <main>
-        <!-- Secondary Level Container -2- Benefits section-->
+        <!-- Secondary Level Container -1- Dates and Times section-->
         <section class="container-fluid container-first-section container--top300 container-callout-dark">
             <div class="row container-wide justify-content-center align-items-start container--translucent container--topbottom20">
                 <div class="col-12 text-center">
@@ -83,11 +83,10 @@
                     <span class="sr-only">Location</span>
                     <p>Calm Little Stars,<br> Lower Ground Floor,<br> 41 Huddersfield Road,<br> Holmfirth
                         <br> HD9 3JH</p>
-
                 </div>
             </div>
         </section>
-        <!-- /Secondary Level Container -2- Form section-->
+        <!-- /Secondary Level Container -1- Dates and Times section-->
         <!-- Secondary Level Container -2- Contact Form-->
         <section class="container-fluid container-wide container-third-section-benefits container--topbottom75 container-callout-dark">
             <div class="row align-items-center container--translucentrounded container--topbottom20">
