Update content on classes.html

--- a/coach.html
+++ b/coach.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Calm Little Stars - Coach</title>
+    <title>Calm Little Stars - Your Coach</title>
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -51,7 +53,7 @@
     <header class="container-fluid container-first-section-experience container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
             <div class="col-12 col-md-6 col-lg-12 text-center">
-                <h1 class="heading--5em heading--topspace">Coach</h2>
+                <h1 class="heading--5em heading--topspace">Your Coach</h2>
             </div>
         </div>
     </header>
@@ -59,26 +61,61 @@
     <main>
         <!-- Secondary Level Container -1- Photo section-->
         <section class="container-fluid container-first-section-coach container--top300 container-callout-dark">
-            <div class="row container-wide justify-content-center align-items-start container--translucent container--topbottom20">
+            <div class="row container-wide justify-content-center align-items-start container--translucent container--topbottom40">
                 <div class="col-12 text-center">
                     <h2>Rebecca Torridon, mindfulness coach</h2>
                 </div>
-                <div class="col-md-4 text-center container--topbottom20">
+                <div class="col-md-4 text-center">
                     <ul class="list-group text-left">
-                        <li class="list-group-item"><img src="assets/images/cert.png" alt="Qualification" height=40 /> Trained in mindfulness by Bangor University</li>
-                        <li class="list-group-item"><img src="assets/images/cert.png" alt="Qualification" height=40 /> Diploma in counselling</li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-2">
+                                    <img src="assets/images/cert.png" alt="Qualification" height=40 />
+                                </div>
+                                <div class="col-10">
+                                    <p>Trained in mindfulness by Bangor University</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                                            <div class="row">
+                                <div class="col-2">
+                                    <img src="assets/images/cert.png" alt="Qualification" height=40 />
+                                </div>
+                                <div class="col-10">
+                                    <p>Diploma in counselling</p>
+                                </div>
+                            </div>
+                            </li>
                     </ul>
                 </div>
-                <div class="col-md-4 text-center container--topbottom20">
+                <div class="col-md-4 text-center">
                     <ul class="list-group text-left">
-                        <li class="list-group-item"><img src="assets/images/cert.png" alt="Qualification" height=40 /> Member of the Counselling Society</li>
-                        <li class="list-group-item"><img src="assets/images/cert.png" alt="Qualification" height=40 /> DBS Police Checked</li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-2">
+                                    <img src="assets/images/cert.png" alt="Qualification" height=40 />
+                                </div>
+                                <div class="col-10">
+                                    <p>Member of the National Counselling Society</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                                            <div class="row">
+                                <div class="col-2">
+                                    <img src="assets/images/cert.png" alt="Qualification" height=40 />
+                                </div>
+                                <div class="col-10">
+                                    <p>DBS Police Checked</p>
+                                </div>
+                            </div>
+                            </li>
                     </ul>
                 </div>
-                <div class="col-md-4 text-center container--topbottom20">
+                <div class="col-md-4 text-center">
                     <blockquote>
-                        <i class="fas fa-quote-left iconsizingsm" aria-hidden="true"></i><span class="sr-only">"</span><br>
-                         I am passionate about living life to the full, and helping other people to do the same. <br>
+                        <i class="fas fa-quote-left iconsizingsm" aria-hidden="true"></i><span class="sr-only">"</span><br> I am passionate about living life to the full, and helping other people to do the same. <br>
                         <i class="fas fa-quote-right iconsizingsm" aria-hidden="true"></i><span class="sr-only">"</span>
                         <footer class="blockquote-footer quote">Rebecca Torridon</footer>
                     </blockquote>
@@ -89,7 +126,7 @@
         <!-- /Secondary Level Container -1- Photo section-->
     </main>
     <!-- Footer-->
-        <!-- Footer-->
+    <!-- Footer-->
     <footer class="container-fluid container-footer container-callout-dark">
         <div class="row align-items-center justify-content-center">
             <div class="col-sm-8 text-center">
