--- a/classes.html
+++ b/classes.html
@@ -69,6 +69,7 @@
                     <i class="far fa-calendar-alt iconsizing" aria-hidden="true"></i>
                     <span class="sr-only">Dates</span>
                     <p>Every Monday and Wednesday</p>
+                    <p>Each class includes time for calming exercises, talk, fun and creativity!</p>
                 </div>
                 <div class="col-md-4 text-center container--topbottom20">
                     <i class="far fa-clock iconsizing" aria-hidden="true"></i>
