Add hyperlink to navbar button

--- a/benefits.html
+++ b/benefits.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
@@ -38,11 +38,15 @@
                     <a class="nav-link" href="coach.html">Your Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                    <a href="classes.html#contact">
+                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                        </a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
+                <a href="classes.html#contact">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                </a>
             </div>
         </div>
     </nav>
