--- a/classes.html
+++ b/classes.html
@@ -40,13 +40,16 @@
                     <a class="nav-link" href="coach.html">Your Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                    <a href="classes.html#contact">
+                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                        </a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
+                <a href="classes.html#contact">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                </a>
             </div>
-        </div>
     </nav>
     <!-- /Navbar -->
     <!-- Header section-->
@@ -63,7 +66,7 @@
         <section class="container-fluid container-first-section container--top300 container-callout-dark">
             <div class="row container-wide justify-content-center align-items-start container--translucent container--topbottom20">
                 <div class="col-12 text-center">
-                    <h2>Classes in Holmfirth, West Yorkshire</h2>
+                    <h2  id="contact">Classes in Holmfirth, West Yorkshire</h2>
                 </div>
                 <div class="col-md-4 text-center container--topbottom20">
                     <i class="far fa-calendar-alt iconsizing" aria-hidden="true"></i>
