--- a/experience.html
+++ b/experience.html
@@ -38,13 +38,16 @@
                     <a class="nav-link" href="coach.html">Your Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
-                    <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                    <a href="classes.html#contact">
+                        <button class="btn text-center btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                        </a>
                 </li>
             </ul>
             <div class="text-right d-none d-lg-inline">
+                <a href="classes.html#contact">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
+                </a>
             </div>
-        </div>
     </nav>
     <!-- /Navbar -->
 
