Add hyperlinks to all buttons on index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Calm Little Stars - Home</title>
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -57,7 +59,9 @@
             <div class="col-6 col-sm-5 offset-sm-2 col-md-6 offset-md-4 offset-lg-5">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
                 <h3 class="page-heading">Holmfirth, West Yorkshire</h3>
-                <button class="btn btn-success btn-lg btn--margintop30">Become Mindful</button>
+                <a href="classes.html#contact">
+                    <button class="btn btn-success btn-lg btn--margintop30">Become Mindful</button>
+                </a>
             </div>
         </div>
     </header>
@@ -80,7 +84,9 @@
                     <p>Regular mindfulness practice can lead to improved concentration and memory.</p>
                 </div>
                 <div class="col-12 text-center">
-                    <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
+                    <a href="benefits.html">
+                        <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
+                    </a>
                 </div>
             </div>
         </section>
@@ -95,7 +101,9 @@
                     <p>Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.</p>
                 </div>
                 <div class="col-md-4 offset-md-8 text-center">
-                    <button class="btn btn-success btn-lg">Download</button>
+                    <a href="facts.html">
+                    <button class="btn btn-success btn-lg">Read Research</button>
+                    </a>
                 </div>
             </div>
         </section>
@@ -111,13 +119,15 @@
                     </div>
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5 text-center">
-                            <p>Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio
-                            or video.</p>
+                            <p>Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience
+                                Mindfulness now through audio or video.</p>
                         </div>
                     </div>
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5 text-center">
-                            <button class="btn btn-success btn-lg">Experience Mindfulness</button>
+                            <a href="experience.html">
+                                <button class="btn btn-success btn-lg">Experience Mindfulness</button>
+                            </a>
                         </div>
                     </div>
                 </div>
