Update README and fix navbar brand links

--- a/classes.html
+++ b/classes.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
@@ -72,7 +72,7 @@
                     <i class="far fa-calendar-alt iconsizing" aria-hidden="true"></i>
                     <span class="sr-only">Dates</span>
                     <p>Every Monday and Wednesday</p>
-                    <p>Each class includes time for calming exercises, talk, fun and creativity!</p>
+                    <p>Each class includes time for calming exercises, talk, fun and creativity! All this for £6 per session.</p>
                 </div>
                 <div class="col-md-4 text-center container--topbottom20">
                     <i class="far fa-clock iconsizing" aria-hidden="true"></i>
