--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
