Update social media links in footer - all html pages

--- a/facts.html
+++ b/facts.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
+        <a class="navbar-brand" href="index.html ">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
@@ -109,7 +109,6 @@
         <!-- / Secondary Level Container -3- left aligned - Experience section-->
     </main>
     <!-- Footer-->
-    <!-- Footer-->
     <footer class="container-fluid container-footer container-callout-dark">
         <div class="row align-items-center justify-content-center">
             <div class="col-sm-8 text-center">
@@ -123,13 +122,13 @@
                 <div class="footer-item">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="http://www.facebook.com/" target="new">
                                 <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="http://www.twitter.com/" target="new">
                                 <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
@@ -142,7 +141,6 @@
 
     <!-- / Footer-->
 
-    <!-- / Footer-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
