--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
                 <div class="footer-item">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="http://www.facebook.com/" target="new">
                                 <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="http://www.twitter.com/" target="new">
                                 <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
