--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="classes.html">Classes</a>
                 </li>
                 <li class="nav-item nav-padding-lg">
-                    <a class="nav-link" href="coach.html">Your Coach</a>
+                    <a class="nav-link" href="coach.html">Coach</a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
                     <a href="classes.html#contact">
