Make form elements required

--- a/benefits.html
+++ b/benefits.html
@@ -121,7 +121,7 @@
                 <form>
                     <div>
                         <label class="sr-only" for="email">Enter your email address </label>
-                        <input type="email" class="form-control footer-item input--text" placeholder="Enter email address">
+                        <input type="email" class="form-control footer-item input--text" placeholder="Enter email address" required>
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
                 </form>
