--- a/classes.html
+++ b/classes.html
@@ -105,15 +105,15 @@
                             <form>
                                 <div class="form-group">
                                     <label class="sr-only" for="emailaddress">Name</label>
-                                    <input type="text" class="form-control input--text" id="exampleFormControlInput1" placeholder="Your Name">
+                                    <input type="text" class="form-control input--text" id="exampleFormControlInput1" placeholder="Your Name" required>
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="emailaddress">Email address</label>
-                                    <input type="email" class="form-control input--text" id="exampleFormControlInput1" placeholder="happychild@calmlittlestars.com">
+                                    <input type="email" class="form-control input--text" id="exampleFormControlInput1" placeholder="happychild@calmlittlestars.com" required>
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="message">Your Message</label>
-                                    <textarea class="form-control input--text" id="exampleFormControlTextarea1" rows="3" placeholder="Enter dates you wish to book, or a message."></textarea>
+                                    <textarea class="form-control input--text" id="exampleFormControlTextarea1" rows="3" placeholder="Enter dates you wish to book, or a message." required></textarea>
                                 </div>
                                 <button type="submit" class="footer-item btn btn-success btn-lg">Start Calming</button>
                             </form>
@@ -133,7 +133,7 @@
                 <form>
                     <div>
                         <label class="sr-only" for="email">Enter your email address </label>
-                        <input type="email" class="form-control footer-item input--text" placeholder="Enter email address">
+                        <input type="email" class="form-control footer-item input--text" placeholder="Enter email address" required>
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
                 </form>
